fixed navbar overflowing on everything

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -5,6 +5,11 @@
  * ------------------------------------- */
 
 // Paddings
+
+body {
+  padding-top: 100px;
+}
+
 .padded {
   padding-top: 5em;
   padding-bottom: 5em;
