--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -7,7 +7,7 @@
 
 .overflowWrapper {
   overflow: scroll !important;
-  padding-top: 120px;
+  padding-top: 20px;
 }
 
 .mapContentWrapper {
